# mixed_reality_robots

./: .gitmodules  README.md
ROS/jackal_description/launch/: description.launch
ROS/jackal_unity_simulation/: CMakeLists.txt  package.xml
ROS/jackal_unity_simulation/launch/: description_rviz.launch  gmapping.launch  navigation.launch  navigation_sim.launch
ROS/jackal_unity_simulation/params/: costmap_common_params.yaml  move_base_params.yaml
ROS/jackal_unity_simulation/params/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
ROS/jackal_unity_simulation/params/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
ROS/jackal_unity_simulation/rviz/: simple_visualization.rviz  simple_vizualization.rviz
ROS/jackal_unity_simulation/scripts/: VelCommander.py
ROS/panda_unity_simulation/: CMakeLists.txt  package.xml
ROS/panda_unity_simulation/action/: ConfirmPathMoveit.action  FollowObjectMoveit.action  PlanPathMoveit.action  RegisterCollisionObjects.action
ROS/panda_unity_simulation/launch/: description_rviz.launch  follow_object.launch  manip_obstacles_sim.launch  publish_description_panda_arm.launch
ROS/panda_unity_simulation/msg/: BoundingBox.msg  SpatialMappingMesh.msg
ROS/panda_unity_simulation/rviz/: manip.rviz
ROS/panda_unity_simulation/scripts/: MoveGroupInterface.py
ROS/panda_unity_simulation/src/: ManipObstaclesManager.cpp  follow_object_interface.cpp  pose_client2.cpp  pose_server2.cpp
Unity/Assets/: WSATestCertificate.pfx
Unity/Assets/Materials/: Cube.mat  Cursor.mat  ManipCursor.mat  ManipTarget.mat  Target.mat  WaitingForConnection.mat
Unity/Assets/MixedRealityToolkit.Generated/: ProjectPreferences.asset
Unity/Assets/MixedRealityToolkit.Generated/CustomProfiles/: New MixedRealitySpatialAwarenessMeshObserverProfile.asset  New MixedRealitySpatialAwarenessSystemProfile 1.asset  New MixedRealityToolkitConfigurationProfile 1.asset  New MixedRealityToolkitConfigurationProfile 2.asset  New MixedRealityToolkitConfigurationProfile.asset  New SpatialObjectMeshObserverProfile 1.asset  New SpatialObjectMeshObserverProfile 2.asset  New SpatialObjectMeshObserverProfile.asset
Unity/Assets/Models/: Arrow.blend  Arrow.mtl  marker.blend  marker.mtl
Unity/Assets/RobotSimScenes/: ManipulationFollow.unity  ObstaclesAndNavigation.unity
Unity/Assets/RosSharp Messages/: FollowObjectMoveit.action
Unity/Assets/RosSharp Messages/FollowObject/action/: FollowObjectMoveitAction.cs  FollowObjectMoveitActionFeedback.cs  FollowObjectMoveitActionGoal.cs  FollowObjectMoveitActionResult.cs  FollowObjectMoveitFeedback.cs  FollowObjectMoveitGoal.cs  FollowObjectMoveitResult.cs
Unity/Assets/RosSharp Messages/MoveBase/action/: MoveBaseAction.cs  MoveBaseActionFeedback.cs  MoveBaseActionGoal.cs  MoveBaseActionResult.cs  MoveBaseFeedback.cs  MoveBaseGoal.cs  MoveBaseResult.cs
Unity/Assets/RosSharp Messages/Moveit/action/: PoseMoveitAction.cs  PoseMoveitActionFeedback.cs  PoseMoveitActionGoal.cs  (+4 more)
Unity/Assets/Scripts/: CamearFollow3rd.cs  CollisionObjectsManager.cs  CollisionObjectsReader.cs  ConfirmPathActionClient.cs  CursorSetTarget.cs  DiffDriveController.cs  DiffDriveWriter.cs  FollowObjectActionClient.cs  FollowObjectController.cs  LineWriter.cs  ManipulationController.cs  MarkerMotionSecond.cs  MoveBaseActionClient.cs  NavGoalController.cs  OdomTfPublisher.cs  OdomTimestampSync.cs  OdometryPublisher.cs  PathSubscriber.cs  PlanPathActionClient.cs  RegisterCollisionObjectsActionClient.cs  SpatialMeshAccessManager.cs  SpatialMeshExportManager.cs  StartMessages.cs  UnityFollowObjectActionClient.cs  moveArrow.cs  rotate.cs
Unity/Assets/Urdf/jackal/: robot_description.urdf
Unity/Assets/Urdf/panda_arm_hand/: robot_description.urdf
User Study/: Calculation.m  Evaluation.xlsx  SUS.docx  Study_Protocol.docx
(+38 files in other folders)
