<?xml version="1.0"?>
<package format="2">
  <name>panda_unity_simulation</name>
  <version>0.0.0</version>
  <description>The panda_unity_simulation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="giuliano@todo.todo">giuliano</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


    <build_depend>message_generation</build_depend>
    <depend>geometry_msgs</depend>
    <depend>moveit_core</depend>
    <depend>moveit_ros_planning</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>moveit_ros_move_group</depend>
    <depend>moveit_visual_tools</depend>
    <depend>moveit_msgs</depend>
    <depend>actionlib</depend>
    <depend>actionlib_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
